Debugged a bug in the previous debug.

--- a/TensorFlow_C2W1_assignment.ipynb
+++ b/TensorFlow_C2W1_assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPcguO2R/iddxsXj/Gs4l+I",
+      "authorship_tag": "ABX9TyNbuzYpvYrTkj8Ok2jfHQV5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,10 +210,10 @@
         "  val_dir = os.path.join(root_path, 'validation')\n",
         "  os.makedirs(train_dir)\n",
         "  os.makedirs(val_dir)\n",
-        "  os.makedirs(os.path.join(root_path, 'cats'))\n",
-        "  os.makedirs(os.path.join(root_path, 'dogs'))\n",
-        "  os.makedirs(os.path.join(root_path, 'cats'))\n",
-        "  os.makedirs(os.path.join(root_path, 'dogs'))\n",
+        "  os.makedirs(os.path.join(train_dir, 'cats'))\n",
+        "  os.makedirs(os.path.join(train_dir, 'dogs'))\n",
+        "  os.makedirs(os.path.join(val_dir, 'cats'))\n",
+        "  os.makedirs(os.path.join(val_dir, 'dogs'))\n",
         "\n",
         "  ### END CODE HERE\n",
         "\n",
