Code and runtime output added in Colab.

--- a/TensorFlow_C3W1_part_1.ipynb
+++ b/TensorFlow_C3W1_part_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsH7S6MEOk02iwY+a4zoli",
+      "authorship_tag": "ABX9TyOhx/zLhPKhe01Fkf09RxMN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,114 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Ungraded Lab: Tokenizer Basics\n",
+        "In most NLP tasks, the initial step in preparing your data is to extract a vocabulary of words from your corpus (i.e. input texts). You will need to define how to represent the texts into numerical representations which can be used to train a neural network. These representations are called tokens and Tensorflow and Keras makes it easy to generate these using its APIs. You will see how to do that in the next cells.\n",
+        "\n",
+        "# Generating the vocabulary\n",
+        "In this notebook, you will look first at how you can provide a look up dictionary for each word. The code below takes a list of sentences, then takes each word in those sentences and assigns it to an integer. This is done using the [fit_on_texts()](https://www.tensorflow.org/api_docs/python/tf/keras/preprocessing/text/Tokenizer#fit_on_texts) method and you can get the result by looking at the word_index property. More frequent words have a lower index."
+      ],
       "metadata": {
-        "id": "jsrwE7AC1-UB"
+        "id": "P3ifKf3x2rVe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jsrwE7AC1-UB",
+        "outputId": "6cd5472e-fbca-4fe2-f231-a48c25825c8b"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'i': 1, 'love': 2, 'my': 3, 'dog': 4, 'cat': 5}\n"
+          ]
+        }
+      ],
+      "source": [
+        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+        "\n",
+        "# Define input sentences\n",
+        "sentences = [\n",
+        "    'i love my dog',\n",
+        "    'I, love my cat'\n",
+        "    ]\n",
+        "\n",
+        "# Initialize the Tokenizer class\n",
+        "tokenizer = Tokenizer(num_words = 100)\n",
+        "\n",
+        "# Generate indices for each word in the corpus\n",
+        "tokenizer.fit_on_texts(sentences)\n",
+        "\n",
+        "# Get the indices and print it\n",
+        "word_index = tokenizer.word_index\n",
+        "print(word_index)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The num_words parameter used in the initializer specifies the maximum number of words minus one (based on frequency) to keep when generating sequences. You will see this in a later exercise. For now, the important thing to note is it does not affect how the word_index dictionary is generated. You can try passing 1 instead of 100 as shown on the next cell and you will arrive at the same word_index.\n",
+        "\n",
+        "Also notice that by default, all punctuation is ignored and words are converted to lower case. You can override these behaviors by modifying the filters and lower arguments of the Tokenizer class as described here. You can try modifying these in the next cell below and compare the output to the one generated above."
+      ],
+      "metadata": {
+        "id": "9k715USC9gGI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define input sentences\n",
+        "sentences = [\n",
+        "    'i love my dog',\n",
+        "    'I, love my cat',\n",
+        "    'You love my dog!'\n",
+        "]\n",
+        "\n",
+        "# Initialize the Tokenizer class\n",
+        "tokenizer = Tokenizer(num_words = 1)\n",
+        "\n",
+        "# Generate indices for each word in the corpus\n",
+        "tokenizer.fit_on_texts(sentences)\n",
+        "\n",
+        "# Get the indices and print it\n",
+        "word_index = tokenizer.word_index\n",
+        "print(word_index)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JWTGBGug-HG7",
+        "outputId": "8ed1f47d-061f-47f9-9182-881fa0e55221"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'love': 1, 'my': 2, 'i': 3, 'dog': 4, 'cat': 5, 'you': 6}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "That concludes this short exercise on tokenizing input texts!"
+      ],
+      "metadata": {
+        "id": "dJdgPpZE-I-a"
+      }
     }
   ]
 }
