--- a/TensorFlow_C3W1_part_2.ipynb
+++ b/TensorFlow_C3W1_part_2.ipynb
@@ -41,11 +41,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "jsrwE7AC1-UB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jsrwE7AC1-UB",
+        "outputId": "e597b72c-01e1-41ee-e43e-8206abc48071"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Word Index =  {'<OOV>': 1, 'my': 2, 'love': 3, 'dog': 4, 'i': 5, 'you': 6, 'cat': 7, 'do': 8, 'think': 9, 'is': 10, 'amazing': 11}\n",
+            "\n",
+            "Sequences =  [[5, 3, 2, 4], [5, 3, 2, 7], [6, 3, 2, 4], [8, 6, 9, 2, 4, 10, 11]]\n"
+          ]
+        }
+      ],
       "source": [
         "from tensorflow.keras.preprocessing.text import Tokenizer\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
@@ -96,10 +111,27 @@
         "print(padded)"
       ],
       "metadata": {
-        "id": "JWTGBGug-HG7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JWTGBGug-HG7",
+        "outputId": "37bd5780-afde-480a-c9d5-8acd55c48f74"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Padded Sequences:\n",
+            "[[ 0  5  3  2  4]\n",
+            " [ 0  5  3  2  7]\n",
+            " [ 0  6  3  2  4]\n",
+            " [ 9  2  4 10 11]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -135,10 +167,29 @@
         "print(padded)"
       ],
       "metadata": {
-        "id": "8nEE_7jOtJFZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8nEE_7jOtJFZ",
+        "outputId": "5fb970ad-3df4-474e-c46d-bac09d0632fa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Word Index =  {'<OOV>': 1, 'my': 2, 'love': 3, 'dog': 4, 'i': 5, 'you': 6, 'cat': 7, 'do': 8, 'think': 9, 'is': 10, 'amazing': 11}\n",
+            "\n",
+            "Test Sequence =  [[5, 1, 3, 2, 4], [2, 4, 1, 2, 1]]\n",
+            "\n",
+            "Padded Test Sequence: \n",
+            "[[0 0 0 0 0 5 1 3 2 4]\n",
+            " [0 0 0 0 0 2 4 1 2 1]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
