--- a/TensorFlow_C3W1_assignment.ipynb
+++ b/TensorFlow_C3W1_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPit11ihjTuRY3qmjOQetFS",
+      "authorship_tag": "ABX9TyP1vJKqCFEVsPeD4PWW/cIn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,31 +41,43 @@
     {
       "cell_type": "code",
       "source": [
-        "!wget https://huggingface.co/datasets/SetFit/bbc-news/raw/main/bbc-text.csv"
+        "!wget https://raw.githubusercontent.com/janmlew/TensorFlow/master/bbc-text.csv\n",
+        "!wget https://raw.githubusercontent.com/janmlew/TensorFlow/master/bbc-text-minimal.csv"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PsSmg3yV2hLO",
-        "outputId": "f593aa0b-6315-4e9b-cd40-7463fa21ee33"
+        "outputId": "2d311842-ead0-41ca-8a49-3fc08bbf47bd"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-10-09 19:11:45--  https://huggingface.co/datasets/SetFit/bbc-news/raw/main/bbc-text.csv\n",
-            "Resolving huggingface.co (huggingface.co)... 18.154.227.7, 18.154.227.87, 18.154.227.69, ...\n",
-            "Connecting to huggingface.co (huggingface.co)|18.154.227.7|:443... connected.\n",
+            "--2023-10-09 20:21:22--  https://raw.githubusercontent.com/janmlew/TensorFlow/master/bbc-text.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 5057493 (4.8M) [text/plain]\n",
-            "Saving to: ‘bbc-text.csv’\n",
+            "Saving to: ‘bbc-text.csv.1’\n",
             "\n",
-            "\rbbc-text.csv          0%[                    ]       0  --.-KB/s               \rbbc-text.csv        100%[===================>]   4.82M  25.9MB/s    in 0.2s    \n",
+            "\rbbc-text.csv.1        0%[                    ]       0  --.-KB/s               \rbbc-text.csv.1      100%[===================>]   4.82M  --.-KB/s    in 0.02s   \n",
             "\n",
-            "2023-10-09 19:11:46 (25.9 MB/s) - ‘bbc-text.csv’ saved [5057493/5057493]\n",
+            "2023-10-09 20:21:23 (218 MB/s) - ‘bbc-text.csv.1’ saved [5057493/5057493]\n",
+            "\n",
+            "--2023-10-09 20:21:23--  https://raw.githubusercontent.com/janmlew/TensorFlow/master/bbc-text-minimal.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 11336 (11K) [text/plain]\n",
+            "Saving to: ‘bbc-text-minimal.csv’\n",
+            "\n",
+            "bbc-text-minimal.cs 100%[===================>]  11.07K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2023-10-09 20:21:23 (66.5 MB/s) - ‘bbc-text-minimal.csv’ saved [11336/11336]\n",
             "\n"
           ]
         }
@@ -237,7 +249,7 @@
         "# Test your function\n",
         "\n",
         "# With original dataset\n",
-        "sentences, labels = parse_data_from_file(\"./data/bbc-text.csv\")\n",
+        "sentences, labels = parse_data_from_file(\"./bbc-text.csv\")\n",
         "\n",
         "print(\"ORIGINAL DATASET:\\n\")\n",
         "print(f\"There are {len(sentences)} sentences in the dataset.\\n\")\n",
@@ -246,7 +258,7 @@
         "print(f\"The first 5 labels are {labels[:5]}\\n\\n\")\n",
         "\n",
         "# With a miniature version of the dataset that contains only first 5 rows\n",
-        "mini_sentences, mini_labels = parse_data_from_file(\"./data/bbc-text-minimal.csv\")\n",
+        "mini_sentences, mini_labels = parse_data_from_file(\"./bbc-text-minimal.csv\")\n",
         "\n",
         "print(\"MINIATURE DATASET:\\n\")\n",
         "print(f\"There are {len(mini_sentences)} sentences in the miniature dataset.\\n\")\n",
