Fixed a problem with the label tokenizer.

--- a/TensorFlow_C3W2_assignment.ipynb
+++ b/TensorFlow_C3W2_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPh+cOT01W4DE3L8fRdjGjN",
+      "authorship_tag": "ABX9TyOxhRsDSkSKTmFz0BMpT/F+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 40,
       "metadata": {
         "id": "vhIBVmcn573L"
       },
@@ -76,24 +76,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rq0-rvS0QJPg",
-        "outputId": "12b302d2-f0b0-43de-e878-3be3897f6ce2"
+        "outputId": "3c0e2c90-df5a-4f2e-b25b-265537409667"
       },
-      "execution_count": 3,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-10-11 10:20:36--  https://raw.githubusercontent.com/janmlew/TensorFlow/master/bbc-text.csv\n",
+            "--2023-10-13 14:14:16--  https://raw.githubusercontent.com/janmlew/TensorFlow/master/bbc-text.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 5057493 (4.8M) [text/plain]\n",
-            "Saving to: ‘bbc-text.csv’\n",
+            "Saving to: ‘bbc-text.csv.1’\n",
             "\n",
-            "bbc-text.csv        100%[===================>]   4.82M  --.-KB/s    in 0.04s   \n",
+            "bbc-text.csv.1      100%[===================>]   4.82M  --.-KB/s    in 0.04s   \n",
             "\n",
-            "2023-10-11 10:20:36 (136 MB/s) - ‘bbc-text.csv’ saved [5057493/5057493]\n",
+            "2023-10-13 14:14:17 (132 MB/s) - ‘bbc-text.csv.1’ saved [5057493/5057493]\n",
             "\n"
           ]
         }
@@ -111,9 +111,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7c4a66ee-68b0-4971-edfb-a34cdc76b133"
+        "outputId": "59c20ef0-e819-456e-ea5d-c199f6425f53"
       },
-      "execution_count": 4,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "n_jLwBpf6NvQ"
       },
-      "execution_count": 5,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -232,7 +232,7 @@
       "metadata": {
         "id": "bnYumTdv6SxL"
       },
-      "execution_count": 6,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -251,9 +251,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8ed576bd-eef0-4a61-e74e-a9550c179aaf"
+        "outputId": "bfa07d83-248e-4a75-d568-562a46083d13"
       },
-      "execution_count": 7,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,14 +308,14 @@
         "    ### START CODE HERE\n",
         "\n",
         "    # Compute the number of sentences that will be used for training (should be an integer)\n",
-        "    train_size = None\n",
+        "    train_size = int(len(sentences)*training_split)\n",
         "\n",
         "    # Split the sentences and labels into train/validation splits\n",
-        "    train_sentences = None\n",
-        "    train_labels = None\n",
+        "    train_sentences = sentences[0:train_size]\n",
+        "    train_labels = labels[0:train_size]\n",
         "\n",
-        "    validation_sentences = None\n",
-        "    validation_labels = None\n",
+        "    validation_sentences = sentences[train_size:]\n",
+        "    validation_labels = labels[train_size:]\n",
         "\n",
         "    ### END CODE HERE\n",
         "\n",
@@ -324,7 +324,7 @@
       "metadata": {
         "id": "Fz1YkEZP6jbS"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -339,10 +339,28 @@
         "print(f\"There are {len(val_labels)} labels for validation.\")"
       ],
       "metadata": {
-        "id": "eZ-_xDZb6kIJ"
+        "id": "eZ-_xDZb6kIJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "74c0dfa4-db11-4c43-cd29-6fba4e89c1a7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 1780 sentences for training.\n",
+            "\n",
+            "There are 1780 labels for training.\n",
+            "\n",
+            "There are 445 sentences for validation.\n",
+            "\n",
+            "There are 445 labels for validation.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -382,10 +400,10 @@
         "    ### START CODE HERE\n",
         "\n",
         "    # Instantiate the Tokenizer class, passing in the correct values for num_words and oov_token\n",
-        "    tokenizer = None\n",
+        "    tokenizer = Tokenizer(num_words=len(train_sentences), oov_token=oov_token)\n",
         "\n",
         "    # Fit the tokenizer to the training sentences\n",
-        "\n",
+        "    tokenizer.fit_on_texts(train_sentences)\n",
         "\n",
         "    ### END CODE HERE\n",
         "\n",
@@ -394,7 +412,7 @@
       "metadata": {
         "id": "fYqQq5Pu6rH2"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -408,10 +426,24 @@
         "print(\"<OOV> token included in vocabulary\" if \"<OOV>\" in word_index else \"<OOV> token NOT included in vocabulary\")"
       ],
       "metadata": {
-        "id": "x8_Q6iRo6tZJ"
+        "id": "x8_Q6iRo6tZJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3d846702-b1ef-495e-c796-d8cc1b3cfafa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vocabulary contains 27285 words\n",
+            "\n",
+            "<OOV> token included in vocabulary\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -447,10 +479,10 @@
         "    ### START CODE HERE\n",
         "\n",
         "    # Convert sentences to sequences\n",
-        "    sequences = None\n",
+        "    sequences = tokenizer.texts_to_sequences(sentences)\n",
         "\n",
         "    # Pad the sequences using the correct padding and maxlen\n",
-        "    padded_sequences = None\n",
+        "    padded_sequences = pad_sequences(sequences, maxlen=maxlen, padding=padding)\n",
         "\n",
         "    ### END CODE HERE\n",
         "\n",
@@ -459,7 +491,7 @@
       "metadata": {
         "id": "y-TwVPXz61RQ"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -473,10 +505,24 @@
         "print(f\"Padded validation sequences have shape: {val_padded_seq.shape}\")"
       ],
       "metadata": {
-        "id": "BEgdCNac69EC"
+        "id": "BEgdCNac69EC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fbadd3dd-472f-4daa-d773-96cd3d2caa1e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Padded training sequences have shape: (1780, 120)\n",
+            "\n",
+            "Padded validation sequences have shape: (445, 120)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -517,16 +563,16 @@
         "    ### START CODE HERE\n",
         "\n",
         "    # Instantiate the Tokenizer (no additional arguments needed)\n",
-        "    label_tokenizer = None\n",
+        "    label_tokenizer = Tokenizer(num_words=len(all_labels))\n",
         "\n",
         "    # Fit the tokenizer on all the labels\n",
-        "\n",
+        "    label_tokenizer.fit_on_texts(all_labels)\n",
         "\n",
         "    # Convert labels to sequences\n",
-        "    label_seq = None\n",
+        "    label_seq = label_tokenizer.texts_to_sequences(split_labels)\n",
         "\n",
         "    # Convert sequences to a numpy array. Don't forget to substact 1 from every entry in the array!\n",
-        "    label_seq_np = None\n",
+        "    label_seq_np = np.array(label_seq) - 1\n",
         "\n",
         "    ### END CODE HERE\n",
         "\n",
@@ -535,7 +581,7 @@
       "metadata": {
         "id": "KwjpemmU7CbA"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -551,10 +597,41 @@
         "print(f\"Tokenized labels of the validation set have shape: {val_label_seq.shape}\\n\")"
       ],
       "metadata": {
-        "id": "ICX_w2jF7EiX"
+        "id": "ICX_w2jF7EiX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4fe21fe0-89b5-48df-e0fc-ba2d5698847d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<OOV> token NOT included in vocabulary\n",
+            "<OOV> token NOT included in vocabulary\n",
+            "First 5 labels of the training set should look like this:\n",
+            "[[3]\n",
+            " [1]\n",
+            " [0]\n",
+            " [0]\n",
+            " [4]]\n",
+            "\n",
+            "First 5 labels of the validation set should look like this:\n",
+            "[[4]\n",
+            " [3]\n",
+            " [2]\n",
+            " [0]\n",
+            " [0]]\n",
+            "\n",
+            "Tokenized labels of the training set have shape: (1780, 1)\n",
+            "\n",
+            "Tokenized labels of the validation set have shape: (445, 1)\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -642,10 +719,31 @@
         "history = model.fit(train_padded_seq, train_label_seq, epochs=30, validation_data=(val_padded_seq, val_label_seq))"
       ],
       "metadata": {
-        "id": "S2woWiQt7M79"
+        "id": "S2woWiQt7M79",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 372
+        },
+        "outputId": "82ec8641-34c5-44a3-bb50-f5add27c8ad1"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-120-873a88cb4a24>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNUM_WORDS\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEMBEDDING_DIM\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMAXLEN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mhistory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_padded_seq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_label_seq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_padded_seq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_label_seq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-119-cd5ea12c18d5>\u001b[0m in \u001b[0;36mcreate_model\u001b[0;34m(num_words, embedding_dim, maxlen)\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m### START CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     model = tf.keras.Sequential([\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     ])\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/tensorflow/python/trackable/base.py\u001b[0m in \u001b[0;36m_method_wrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    202\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_self_setattr_tracking\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    203\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 204\u001b[0;31m       \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    205\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    206\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_self_setattr_tracking\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprevious_value\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/keras/src/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0;31m# To get the full stack trace, call:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m             \u001b[0;31m# `tf.debugging.disable_traceback_filtering()`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m             \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/keras/src/engine/sequential.py\u001b[0m in \u001b[0;36madd\u001b[0;34m(self, layer)\u001b[0m\n\u001b[1;32m    183\u001b[0m                 \u001b[0mlayer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunctional\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModuleWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlayer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    184\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 185\u001b[0;31m             raise TypeError(\n\u001b[0m\u001b[1;32m    186\u001b[0m                 \u001b[0;34m\"The added layer must be an instance of class Layer. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m                 \u001b[0;34mf\"Received: layer={layer} of type {type(layer)}.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: The added layer must be an instance of class Layer. Received: layer=None of type <class 'NoneType'>."
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
