--- a/TensorFlow_C3W2_part_2.ipynb
+++ b/TensorFlow_C3W2_part_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0IjeD1Q6P/zwNFPZGufd2",
+      "authorship_tag": "ABX9TyP1o0r4PrPfZN91OhuziNPU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
         "id": "YvVuoOQ1dTfR",
         "outputId": "3f631791-a0e8-4828-f912-688cbbcce4d9"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "TMsvQ3PhdV3e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "qvcu10-tdaSH"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "kwk1cPIGde_3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,7 +199,7 @@
       "metadata": {
         "id": "B_DiOW88diGl"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -241,7 +241,7 @@
         "id": "iRUOWwoTdteH",
         "outputId": "32f9ac13-c447-4efc-be2f-9350f76516ad"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +287,7 @@
         "id": "OtCPufUed34z",
         "outputId": "6105b063-298d-451b-b205-fbe7cb700e3b"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +333,7 @@
       "metadata": {
         "id": "s38-GE8ed95P"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +363,7 @@
         "id": "HwusWx1OeDGU",
         "outputId": "cf5e187c-9ad2-4adb-a0ff-036d12a9bbac"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +469,7 @@
         "id": "nU8Lm3VOeJSd",
         "outputId": "7b55eb8a-a528-434c-ac5d-e91590f03d37"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -525,7 +525,7 @@
         "id": "8QJ92c14eP3K",
         "outputId": "6008ce46-1e42-41e6-d683-1d2de1448c9e"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +567,7 @@
       "metadata": {
         "id": "UPvi8O4oeStc"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,12 +587,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 17
+          "height": 52
         },
         "id": "jSS9Xl8OeUzv",
         "outputId": "803a5ccb-6923-4ec4-e303-a4c1d36d416c"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -730,7 +730,7 @@
         "# Wrap Up\n",
         "In this lab, you were able to build a binary classifier to detect sarcasm. You saw some overfitting in the initial attempt and hopefully, you were able to arrive at a better set of hyperparameters.\n",
         "\n",
-        "So far, you've been tokenizing datasets from scratch and you're treating the vocab size as a hyperparameter. Furthermore, you're tokenizing the texts by building a vocabulary of full words. In the next lab, you will make use of a pre-tokenized dataset that uses a vocabulary of *subwords*. For instance, instead of having a uniqe token for the word Tensorflow, it will instead have a token each for Ten, sor, and flow. You will see the motivation and implications of having this design in the next exercise. See you there!"
+        "So far, you've been tokenizing datasets from scratch and you're treating the vocab size as a hyperparameter. Furthermore, you're tokenizing the texts by building a vocabulary of full words. In the next lab, you will make use of a pre-tokenized dataset that uses a vocabulary of *subwords*. For instance, instead of having a unique token for the word Tensorflow, it will instead have a token each for Ten, sor, and flow. You will see the motivation and implications of having this design in the next exercise. See you there!"
       ],
       "metadata": {
         "id": "p2aEK5mUeW9m"
