Function definition fixup.

--- a/TensorFlow_C3W2_assignment.ipynb
+++ b/TensorFlow_C3W2_assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMItlDWIKe6BE16MH2u1sKE",
+      "authorship_tag": "ABX9TyPqPMdYsh76nHAqT5hxtBvD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -402,7 +402,7 @@
         "    ### START CODE HERE\n",
         "\n",
         "    # Instantiate the Tokenizer class, passing in the correct values for num_words and oov_token\n",
-        "    tokenizer = Tokenizer(num_words=len(train_sentences), oov_token=oov_token)\n",
+        "    tokenizer = Tokenizer(num_words=num_words, oov_token=oov_token)\n",
         "\n",
         "    # Fit the tokenizer to the training sentences\n",
         "    tokenizer.fit_on_texts(train_sentences)\n",
